--- a/app/src/main/res/layout/activity_victim.xml
+++ b/app/src/main/res/layout/activity_victim.xml
@@ -11,47 +11,64 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true">
+
         <TextView
             android:id="@+id/userNameText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:gravity="start"
             android:textColor="@color/black"
             android:textSize="18sp"
-            android:textStyle="bold"
-            android:gravity="start"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp" />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/exitText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
             android:gravity="end"
             android:text="@string/exit"
             android:textColor="@color/purple_500"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="20dp" />
+            android:textStyle="bold" />
     </LinearLayout>
+
     <TextView
         android:id="@+id/mainMenuText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/victim"
         android:layout_below="@+id/line"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
+        android:text="@string/victim"
         android:textColor="@color/black"
         android:textSize="20sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
+
     <Button
         android:id="@+id/addVictim"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="@string/addVictim"
         android:layout_below="@+id/mainMenuText"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="20dp"
+        android:text="@string/addVictim" />
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/addVictim"
+        android:layout_centerHorizontal="true">
+
+        <RelativeLayout
+            android:id="@+id/relativeLayoutVictimForButtons"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </RelativeLayout>
+    </ScrollView>
 
 </RelativeLayout>
