--- a/app/src/main/res/layout/activity_accused.xml
+++ b/app/src/main/res/layout/activity_accused.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/relativeLayoutVictim"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    tools:context=".VictimActivity">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".AccusedActivity">
 
     <LinearLayout
         android:id="@+id/line"
@@ -19,9 +19,9 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:gravity="start"
-            android:maxLength="25"
             android:textColor="@color/black"
             android:textSize="18sp"
+            android:maxLength="25"
             android:textStyle="bold" />
 
         <TextView
@@ -44,28 +44,28 @@
         android:layout_below="@+id/line"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:text="@string/victim"
+        android:text="@string/accused"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/addVictim"
+        android:id="@+id/addAccused"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/mainMenuText"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:text="@string/addVictim" />
+        android:text="@string/addAccused" />
 
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/addVictim"
+        android:layout_below="@+id/addAccused"
         android:layout_centerHorizontal="true">
 
         <RelativeLayout
-            android:id="@+id/relativeLayoutVictimForButtons"
+            android:id="@+id/relativeLayoutAccusedForButtons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
