--- a/app/src/main/res/layout/activity_current_sentence.xml
+++ b/app/src/main/res/layout/activity_current_sentence.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CurrentStatementActivity">
+    tools:context=".CurrentSentenceActivity">
 
     <LinearLayout
         android:id="@+id/line1"
@@ -56,14 +56,14 @@
         android:layout_below="@+id/currentName">
 
         <Button
-            android:id="@+id/editStatement"
+            android:id="@+id/editSentence"
             android:layout_width="170dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/edit" />
 
         <Button
-            android:id="@+id/deleteStatement"
+            android:id="@+id/deleteSentence"
             android:layout_width="170dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -78,7 +78,7 @@
         android:layout_centerHorizontal="true">
 
         <RelativeLayout
-            android:id="@+id/relativeLayoutCurrentStatementEditTexts"
+            android:id="@+id/relativeLayoutCurrentSentenceEditTexts"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -113,15 +113,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/lineText3"
-                android:orientation="vertical"
-                android:gravity="start">
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/lineText5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/lineText4"
                 android:orientation="vertical"
                 android:gravity="start">
             </LinearLayout>
