--- a/app/src/main/res/layout/activity_current_victim.xml
+++ b/app/src/main/res/layout/activity_current_victim.xml
@@ -19,6 +19,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:gravity="start"
+            android:maxLength="25"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -85,7 +86,7 @@
                 android:id="@+id/lineText1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:gravity="start">
             </LinearLayout>
 
@@ -94,7 +95,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/lineText1"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:gravity="start">
             </LinearLayout>
 
@@ -103,7 +104,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/lineText2"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:gravity="start">
             </LinearLayout>
 
@@ -112,7 +113,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/lineText3"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:gravity="start">
             </LinearLayout>
 
@@ -121,7 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/lineText4"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:gravity="start">
             </LinearLayout>
 
@@ -130,7 +131,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/lineText5"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:gravity="start">
             </LinearLayout>
 
@@ -139,7 +140,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/lineText6"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:gravity="start">
             </LinearLayout>
 
@@ -148,7 +149,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/lineText7"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:gravity="start">
             </LinearLayout>
 
@@ -157,7 +158,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/lineText8"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:gravity="start">
             </LinearLayout>
 
@@ -166,7 +167,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/lineText9"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:gravity="start">
             </LinearLayout>
 
@@ -175,7 +176,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/lineText10"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:gravity="start">
             </LinearLayout>
 
