--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -19,6 +19,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         android:gravity="start"
+        android:maxLength="25"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp" />
 
