--- a/app/src/main/res/layout/activity_add_sentence.xml
+++ b/app/src/main/res/layout/activity_add_sentence.xml
@@ -58,6 +58,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
+            <Spinner
+                android:id="@+id/spinnerIdSentenceAndIdCases"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_centerHorizontal="true"/>
+
             <EditText
                 android:id="@+id/etDate_of_issue"
                 android:layout_width="match_parent"
@@ -65,6 +72,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
+                android:layout_below="@+id/spinnerIdSentenceAndIdCases"
                 android:ems="10"
                 android:hint="@string/date_of_issue"
                 android:inputType="textPersonName" />
